test/conformance/chainsaw/validating-admission-policy-reports/background/with-validating-admission-policy-binding-fail/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging-ns-2
  labels:
    environment: staging
