test/conformance/chainsaw/validating-admission-policy-reports/background/with-validating-admission-policy-binding-fail/deployment-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-3
  namespace: staging-ns-2
