test/conformance/chainsaw/validating-admission-policy-reports/background/with-validating-admission-policy-binding-fail/report-assert.yaml
apiVersion: wgpolicyk8s.io/v1beta1
kind: PolicyReport
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  namespace: staging-ns-2
  ownerReferences:
  - apiVersion: apps/v1
    kind: Deployment
    name: deployment-3
results:
- message: 'failed expression: object.spec.replicas <= 5'
  policy: check-deployment-replicas-04
  result: fail
  source: ValidatingAdmissionPolicy
scope:
  apiVersion: apps/v1
  kind: Deployment
  name: deployment-3
  namespace: staging-ns-2
summary:
  error: 0
  fail: 1
  pass: 0
  skip: 0
  warn: 0
